--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-------------Navigation----------->
     <div class="nav">
         <div class="left-nav">
-            <a href="profilepage-socialbook.netlify.app"><img src="image/logo.png" class="logo-left-nav"></a>
+            <a href="https://profilepage-socialbook.netlify.app/"><img src="image/logo.png" class="logo-left-nav"></a>
             <div class="icon-left-nav">
                 <img src="image/notification.png">
                 <img src="image/inbox.png">
@@ -33,7 +33,7 @@
                     <img src="image/profile-pic.png">
                     <div>
                         <p>John Nicholson</p>
-                        <a href="profilepage-socialbook.netlify.app">See your profile</a>
+                        <a href="https://profilepage-socialbook.netlify.app/">See your profile</a>
                     </div>
                 </div>
                 <hr>
